# zksync-remix-plugin

./: .gitignore  Cargo.toml  Config_HeghennBruer-da_20240218_1310.dc  DepositContract_compData.json  DockerfileDevnet  DockerfileRocket  GreenSatoshiToken_compData.json  README.md  azure-pipelines.yml  config.nginx  console_compData.json  install.sh  microk8_token.txt  package com.algorithmhelper.algorit.json  package.json  pnpm-lock.yaml  run.sh  supervisord.conf  tsconfig.json  visual impoortant.txt
.github/workflows/: api-deploy.yml  auto-api-deploy-dev.yml  check-zksolc-versions.yml  devnet-deploy.yml  devnet-prod-deploy.yml  manual-api-deploy-prod.yml  manual-ui-deploy-prod.yml  remix-deploy.yml  rust-checks.yml  rust-linting.yml  ui-linting.yml
ChainLink/src/v0.4/: Aggregator.sol  Chainlink.sol  ChainlinkClient.sol  Chainlinked.sol  ERC677Token.sol  LinkToken.sol  Oracle.sol
ChainLink/src/v0.5/: Chainlink.sol  ChainlinkClient.sol  LinkTokenReceiver.sol  Median.sol  Oracle.sol
ChainLink/src/v0.6/: AggregatorFacade.sol  AggregatorProxy.sol  Chainlink.sol  ChainlinkClient.sol  CheckedMath.sol  DeviationFlaggingValidator.sol  EACAggregatorProxy.sol  Flags.sol  FluxAggregator.sol  LinkTokenReceiver.sol  Median.sol  Oracle.sol  Owned.sol  SafeMath128.sol  SafeMath32.sol  SafeMath64.sol  SignedSafeMath.sol  SimpleReadAccessController.sol  SimpleWriteAccessController.sol  VRF.sol  VRFConsumerBase.sol  VRFCoordinator.sol  VRFRequestIDBase.sol
ChainLink/src/v0.7/: AuthorizedForwarder.sol  AuthorizedReceiver.sol  Chainlink.sol  ChainlinkClient.sol  ConfirmedOwner.sol  ConfirmedOwnerWithProposal.sol  KeeperBase.sol  KeeperCompatible.sol  KeeperRegistry1_1.sol  LinkTokenReceiver.sol  Operator.sol  OperatorFactory.sol  UpkeepRegistrationRequests.sol  VRFConsumerBase.sol  VRFRequestIDBase.sol
ChainLink/src/v0.8/: AuthorizedReceiver.sol  ChainSpecificUtil.sol  Chainlink.sol  ChainlinkClient.sol  ConfirmedOwner.sol  ConfirmedOwnerWithProposal.sol  Denominations.sol  Flags.sol  KeepersVRFConsumer.sol  OCR2Abstract.sol  SimpleReadAccessController.sol  SimpleWriteAccessController.sol  ValidatorProxy.sol
Umbra-Cash(copy)/contracts/: IUmbraHookReceiver.sol  Umbra.sol
Umbra-Cash/contracts/: MockHook.sol  StealthKeyRegistry.sol  TestToken.sol
Umbra-Cash/contracts/artifacts/: Umbra.json  Umbra_metadata.json
api/: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker_run.sh  example.env
api/compiled/: combined.json
api/configs/: grafana-logs.config.river  grafana-logs.config.yaml
api/hardhat_env/: .gitignore  Dockerfile  hardhat.config.ts  hardhat2.config.ts  package.json
api/logs/: debug.2023-10-19  info.2023-10-19  info.2023-10-22
api/sol/temp/test/: test.sol
api/src/: cors.rs  errors.rs  main.rs  metrics.rs  tracing_log.rs  types.rs  worker.rs
api/src/handlers/: compile.rs  compile_multiple.rs  compiler_version.rs  mod.rs  process.rs  save_code.rs  service_version.rs  types.rs  utils.rs  verify.rs
api/src/utils/: cleaner.rs  hardhat_config.rs  lib.rs  mod.rs
crates/lambdas/: Cargo.toml
crates/lambdas/src/: compile.rs  generate_presigned_urls.rs  poll.rs  verify.rs
crates/lambdas/src/common/: errors.rs  mod.rs  utils.rs
crates/types/: Cargo.toml
crates/types/src/: item.rs  lib.rs
crates/types/src/item/: errors.rs  task_result.rs
crates/worker/: Cargo.toml
crates/worker/hardhat_env/: .gitignore
crates/worker/hardhat_env/workspaces/8f284850-0eb3-485c-8604-7214e32e0db8/: hardhat.config.ts
crates/worker/src/: clients.rs  compile_processor.rs  dynamodb_client.rs  errors.rs  input_preparator.rs  main.rs  processor.rs  purgatory.rs  s3_client.rs  sqs_client.rs  sqs_listener.rs  types.rs  worker.rs
crates/worker/src/clients/: dynamodb_client.rs  errors.rs  retriable.rs  s3_client.rs
crates/worker/src/clients/dynamodb_clients/: client.rs  mod.rs  wrapper.rs
crates/worker/src/clients/s3_clients/: client.rs  wrapper.rs
crates/worker/src/clients/sqs_clients/: client.rs  wrapper.rs
crates/worker/src/commands/: compile.rs  errors.rs  mod.rs  utils.rs  verify.rs
crates/worker/src/processor/: compile_message_processor.rs  compile_processor.rs  errors.rs  input_preparator.rs  user_defined_processor.rs  verify_processor.rs
crates/worker/src/sqs_client/: mod.rs  wrapper.rs
crates/worker/src/sqs_clients/: client.rs  wrapper.rs
crates/worker/src/utils/: cleaner.rs  hardhat_config.rs  lib.rs  mod.rs
docs/: CONTRIBUTING.md
examples/: Greeter.sol
lambdas/: Cargo.toml  README.md
lambdas/src/: compile.rs  generate_presigned_urls.rs
lambdas/src/common/: mod.rs
plugin/: .env  .eslintrc.json  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  post-build.cjs  tsconfig.json  vite.config.ts
plugin/public/: index.html  meta.json
plugin/src/: App.css  App.tsx  RemixProvider.tsx  env.d.ts  index.css  index.tsx  reportWebVitals.ts
plugin/src/PluginClient/: index.ts
plugin/src/api/: asyncRequests.ts  saveCode.ts  types.ts
plugin/theme/: background.css  border.css  display.css  margin.css  padding.css  palette.css  sizes.css  text.css  theme.css  util.css
verified-sources/0x00000000219ab540356cbb839cbe05303d7705fa/: creator-tx-hash.txt  metadata.json
worker/: Cargo.toml
worker/src/: dynamodb_client.rs  errors.rs  main.rs  sqs_client.rs  sqs_listener.rs  types.rs  worker.rs
worker/src/commands/: compile.rs  mod.rs  verify.rs
worker/src/utils/: cleaner.rs  lib.rs
(+520 files in other folders)
