[workspace]
members = ["crates/types", "crates/lambdas", "crates/worker"]
exclude = ["api"]

[workspace.dependencies]
aws-config = "1.5.5"
aws-sdk-s3 = "1.43.0"
aws-sdk-sqs = "1.39.0"
aws-sdk-dynamodb = "1.42.0"
chrono = "0.4.38"
tokio = { version = "1.39.3", features = ["macros"] }
serde = "1.0.207"
serde_json = "1.0.128"
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
  "fmt",
  "ansi",
] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

# Internal dependencies
types = { version = "0.0.1", path = "crates/types" }
