[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.4", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3.17", features = [
  "env-filter",
  "json",
  "registry",
  "smallvec",
] }
tracing-appender = "0.2"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
solang-parser = "0.3.2"
crossbeam-queue = "0.3.8"
crossbeam-skiplist = "0.1.1"
yansi = "0.5.1"
thiserror = "1.0.49"
chrono = "0.4.31"
clokwerk = "0.4.0"
walkdir = "2.3.2"
lazy_static = "1.5.0"
tokio = { version = "1.38.0", features = ["process"] }
prometheus = "0.13.4"
