[package]
name = "zksync-lambdas"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-s3 = "1.43.0"
aws-sdk-dynamodb = "1.40.0"
aws-sdk-sqs = "1.37.0"
lambda_runtime = "0.13.0"
lambda_http = "0.13.0"
tokio = { version = "1.39.2", features = ["macros"] }
serde = "1.0.207"
serde_json = "1.0.124"
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[[bin]]
name = "generate-presigned-urls"
version = "0.0.1"
path = "src/generate_presigned_urls.rs"
