[package]
name = "worker"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = {version = "1.39.3", features = ["macros", "rt-multi-thread", "sync"]}
aws-config = "1.5.5"
aws-sdk-s3 = "1.43.0"
aws-sdk-sqs = "1.39.0"
aws-sdk-dynamodb = "1.42.0"
aws-runtime = "1.4.0"
async-channel = "2.3.1"
chrono = "0.4.38"
crossbeam-queue = "0.3.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.124"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
thiserror = "1.0.63"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt", "ansi"] }
log = "0.4.22"
