[package]
name = "zksync-lambdas"
version = "0.0.1"
edition = "2021"
authors = ["edwinswatpako@gmail.com"]

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

lambda_http = "0.13.0"

# Inner crates
types.workspace = true

[[bin]]
name = "generate-presigned-urls"
version = "0.0.1"
path = "src/generate_presigned_urls.rs"

[[bin]]
name = "compile"
version = "0.0.1"
path = "src/compile.rs"

[[bin]]
name = "verify"
version = "0.0.1"
path = "src/verify.rs"

[[bin]]
name = "poll"
version = "0.0.1"
path = "src/poll.rs"