[package]
name = "types"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-sdk-dynamodb.workspace = true
aws-sdk-sqs.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true