[package]
name = "worker"
version = "0.0.1"
edition = "2021"

[dependencies]
aws-config.workspace = true
aws-sdk-s3.workspace = true
aws-sdk-sqs.workspace = true
aws-sdk-dynamodb.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

anyhow = "1.0.89"
aws-runtime = "1.4.0"
aws-smithy-types = "1.2.2"
async-channel = "2.3.1"
futures = "0.3.30"
lazy_static = "1.5.0"
walkdir = "2.3.2"

# Inner crates
types = { workspace = true }
